@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclUnixChan.c,v 1.42.2.6 2005/11/27 02:34:42 das Exp $
+ * RCS: @(#) $Id$
  */
 
 #include "tclInt.h"	/* Internal definitions for Tcl. */
@@ -3281,6 +3281,9 @@ TclUnixWaitForFile(fd, mask, timeout)
 	}
 	if (timeout == 0) {
 	    break;
+	}
+	if (timeout < 0) {
+	    continue;
 	}
 
 	/*
